--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
     <main>
       <load src="partials/hero.html" />
       <load src="partials/solutions.html" />
+      <load src="partials/cases.html" />
+      <load src="partials/blog.html" />
+      <load src="partials/our-team.html" />
     </main>
     <!-- Loads the specified .html file -->
 
